CVS

   * Added new logger interface. This traps all errors to a file or 
   a file descriptor. There is now a mechanism to write warnings and 
   errors to a file for inspection by the user.

   * Removed depricated libinput from the various subdirectory. It has been
   replaced by libkui.

   * Added 'set asr' or autosourcereload option to CGDB. It is on by default.
   It is capable of reloading a source file when CGDB detects that a file has
   been modified. To turn this feature of do ':set noasr'.

   * The :source_reload colon command has been implemented. It forces CGDB to
   reload the current file in the source viewer.


cgdb-0.5.0 (07/14/2004)

   * "progs" directory is no longer installed in a potentially 
   read-only directory. It is installed now in top_builddir, instead of
   top_srcdir.

   * Added libkui into CGDB. This is the fisrt of the 4 new libraries
   designed to make CGDB flexible and modular. Because of this, the version 
   number has been bumped up to .5.0.

   * Fixed crash in TGDB when buffering commands. If the user hit
   'n' <Enter> <Enter> ... fast, while GDB was not responding, or working
   on a command, the buffering code in TGDB would enter a bad command into
   a queue, causing it to crash when it tries to execute the command.

   * Fix crash in CGDB when parsing command line parameters. I think this crash 
	showed up when I starting compiling CGDB with 3.3 instead of 2.95. It would
	crash when trying to pass the --pid argument to GDB through CGDB.

cgdb-0.4.2 (05/10/2004)

    * CGDB now compiles again on AIX 4.3.  Fixed Makefile.am in various/util/src
	to not have a space between the -L and the path.

cgdb-0.4.1 (04/26/2004)

   * Removed a memory leak from CGDB. When debugging applications that output
   a lot of text, CGDB would reportedly grow well over 400MB. Thanks to the
   sender of this patch, who decided to keep themselves anonymous.

   * Removed all instances of PATH_MAX and replaced with FSUTIL_PATH_MAX.